--- a/02_Basic_image_manupulation_using_numpy.ipynb
+++ b/02_Basic_image_manupulation_using_numpy.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,9 +144,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Choose : \n",
+      "1 : to load image\n",
+      "2 : to edit image\n",
+      "3 : to save image\n",
+      "4 : to exit\n",
+      "Please enter the file name with path: \n",
+      "ERROR: File not found\n",
+      "Choose : \n",
+      "1 : to load image\n",
+      "2 : to edit image\n",
+      "3 : to save image\n",
+      "4 : to exit\n",
+      "ERROR: Invalid Choice.\n",
+      "Please, choose from given options.\n",
+      "Choose : \n",
+      "1 : to load image\n",
+      "2 : to edit image\n",
+      "3 : to save image\n",
+      "4 : to exit\n"
+     ]
+    }
+   ],
    "source": [
     "imageManupulation()"
    ]
