--- a/Lectures Notes/class-1-20_03_2023.ipynb
+++ b/Lectures Notes/class-1-20_03_2023.ipynb
@@ -5,67 +5,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are two brought applications for working on the data science \n",
-    "1. licenced app.\n",
-    "- - power bi, tabal, IBS HTS, AMOS (ana. of moment of strut.), lisre, statistic, SAS\n",
-    "- - these are basically use for data visualization \n",
-    "- -  to run these app. we need an individial llisence or a instutuional lisence\n",
-    "- - all these app. are GUI based and coding free\n",
+    "## INTRODUCTION\n",
     "\n",
+    "There are two brought applications for working on the data science  \n",
+    "1. licenced app.\n",
+    "    - power bi, tabal, IBS HTS, AMOS (ana. of moment of strut.), lisre, statistic, SAS\n",
+    "    - these are basically use for data visualization \n",
+    "    -  to run these app. we need an individial llisence or a instutuional lisence\n",
+    "    - all these app. are GUI based and coding free\n",
     "2. open-source\n",
-    "- - the two most popular open source languages in the field of DS are R and python.4\n",
-    "- - to use these languages some kind of coding is req. but it is possible to do anything in an opensource language like R and Python.\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There are basically three part in the Data Scienve or Data Analytics \n",
+    "    - the two most popular open source languages in the field of DS are R and python.4\n",
+    "    - to use these languages some kind of coding is req. but it is possible to do anything in an opensource language like R and Python.\n",
+    "---\n",
+    "\n",
+    "There are basically three part in the Data Scienve or Data Analytics  \n",
     "1. Writing the code in r/python\n",
     "2. Trying to find out what kind of stastistics has to be used\n",
-    "3. Python code will give you some kind of the output trying to understand the interpretation of the output."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "3. Python code will give you some kind of the output trying to understand the interpretation of the output.\n",
+    "---\n",
+    "\n",
     "#### Applications of Data Science\n",
     "\n",
     "**Booking the cab with OLA app** \n",
     "- there are four clustor of vehicle : micro , mini, prime and sidhan\n",
     "- try to identify how a new model of a car manufacturor will be assigned to each of these four clustors.\n",
-    "- this is known as segmental Analysis\n",
-    "\n",
+    "- this is known as segmental Analysis  \n",
     "\n",
     "**Predictive Analysis** \n",
     "- In the segmental analysis there should be homoginity and the cluster itself should be hetrogeneous in nature while in predictive analysis we are interested to do some kind of the prediction\n",
     "- Example : \n",
-    "- - Predicting how many runs india will score \n",
-    "- - predicting whether india will win or loose the match \n",
-    "- - Whether a person is eligible for a lone \n",
-    "- - Eligibility of the customer for the credit card \n",
-    "- - Whether a student will pass/fail in the exam \n",
-    "\n",
+    "    - Predicting how many runs india will score \n",
+    "    - predicting whether india will win or loose the match \n",
+    "    - Whether a person is eligible for a lone \n",
+    "    - Eligibility of the customer for the credit card \n",
+    "    - Whether a student will pass/fail in the exam  \n",
     "\n",
     "**Associative modul** \n",
     "- how to build a associative model which can find out the group of products generally perchased by the customer.\n",
-    "\n",
-    "\n",
+    "  \n",
     "**Statistical Analysis** is the process of analysing and conncting sample of data to uncover the pattern so that the decisions are more scientific more accurate. The raw material for data analytics is the data.\n",
     "\n",
+    "--- \n",
     "\n",
     "**There are two sources to get data** \n",
     "1. is the primary sources\n",
-    "- - google form is the most widly used primary use for collecting the data \n",
+    "    - google form is the most widly used primary use for collecting the data \n",
     "2. Secondary Source : \n",
-    "- - there is lot of data we get from internet/ \n",
-    "- - Kaggle, github are the two most popular secondary source for downloading the data from the net. \n",
+    "    - there is lot of data we get from internet/ \n",
+    "    - Kaggle, github are the two most popular secondary source for downloading the data from the net. \n",
     "\n",
-    "\n",
+    "---\n",
     "\n",
     "\n",
     "**the popular formats are :**  \n",
@@ -80,7 +69,7 @@
     "\n",
     "to import files of different format into jupyter notebook different functions will be req. \n",
     "\n",
-    "\n",
+    "---\n",
     "\n",
     "\n",
     "**What is the Library in the Python?**\n",
