--- a/Lectures Notes/class-1-20_03_2023.ipynb
+++ b/Lectures Notes/class-1-20_03_2023.ipynb
@@ -79,8 +79,120 @@
     "- scipy (scientific python): This lib. is used for all the scientific functions like eigen value and vector, test of normality and outlier and presence of missing value \n",
     "- matplotlib, seaborn : these lib. are used for making graphics in py. like pychart, bar plot, scatter plot, etc.\n",
     "- statsmodels : this lib. is used for statistical functions like linear regression.\n",
-    "- scitlearn : This lib. is used to create all the ML models in py."
+    "- scitlearn : This lib. is used to create all the ML models in py.\n",
+    "- pandas : this lib. is used for handling data-frames in python and for importing in diff. formats in jupyter notebook  \n",
+    "\n",
+    "A lib. is compile set of similar fun. and datasets, so a lib. is consist of no. of fun.s and each fun. is consist of no. of arguments and compiled datasets\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**how to use python** \n",
+    "\n",
+    "There are three popular integrated design environment for executing the python code : \n",
+    "1. jupyter notebook : \n",
+    "    - The advantage is all the basic libraries are pre installed in jupyter notebook. You only need to load the lib. in the current notebook.\n",
+    "    - \n",
+    "2. pychame \n",
+    "3. spyder \n",
+    "\n",
+    "---\n",
+    "\n",
+    "**What is advantage of using Integrated Development Environment (IDE)**\n",
+    "\n",
+    "**Basic steps to follow in writting the code in jupyter notebook** \n",
+    "1. Python is case sensitive\n",
+    "2. do not leave blank space while writing the code \n",
+    "3. \n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Basics of Statistics \n",
+    "\n",
+    "There are two type of values : \n",
+    "1. discrete\n",
+    "2. continuous"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Types in Python\n",
+    "1. Integer : Indicates Discrete \n",
+    "2. Float : Indicates continuous\n",
+    "3. date and time: mm_dd_yyyy\n",
+    "4. object: referance of string"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**measurement of the variable** \n",
+    "\n",
+    "There are diff. ways of measuring the variable in python: \n",
+    "- the measurment of variable is categorical or numerical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Instructions for Jupyter\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "- df : it is the object whose class is dataframe"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Class 3 : 22-03-2023"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "to save the file use **save as**  \n",
+    "to resave the file use **save and checkpoint**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
