--- a/Lectures Notes/hsb2/hsb2.ipynb
+++ b/Lectures Notes/hsb2/hsb2.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -26,13 +35,14 @@
     "    - 58\n",
     "10. which variable has the lowest and the highest range ?\n",
     "    - id\n",
-    "11. calc. the intercotile range for the following : read, write, science, maths, Socst\n",
-    "    - read : \n",
-    "    - write : \n",
-    "    - science : \n",
-    "    - maths : \n",
-    "    - socst : \n",
-    "q3-q1"
+    "11. calc. the intercotile range (q3-q1) for the following : read, write, science, maths, Socst\n",
+    "    - read : 32\n",
+    "    - write : 15\n",
+    "    - science : 32\n",
+    "    - maths : 26\n",
+    "    - socst : 35\n",
+    "\n",
+    "    \n"
    ]
   },
   {
@@ -41,21 +51,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "df = pd.read_csv('hsb2.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -231,13 +232,308 @@
        "max     76.000000   67.000000   75.000000   74.000000   71.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 200 entries, 0 to 199\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column   Non-Null Count  Dtype\n",
+      "---  ------   --------------  -----\n",
+      " 0   id       200 non-null    int64\n",
+      " 1   Gender   200 non-null    int64\n",
+      " 2   race     200 non-null    int64\n",
+      " 3   ses      200 non-null    int64\n",
+      " 4   schtyp   200 non-null    int64\n",
+      " 5   prog     200 non-null    int64\n",
+      " 6   read     200 non-null    int64\n",
+      " 7   write    200 non-null    int64\n",
+      " 8   math     200 non-null    int64\n",
+      " 9   science  200 non-null    int64\n",
+      " 10  socst    200 non-null    int64\n",
+      "dtypes: int64(11)\n",
+      "memory usage: 17.3 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47    27\n",
+       "50    18\n",
+       "63    16\n",
+       "57    14\n",
+       "52    14\n",
+       "44    13\n",
+       "42    13\n",
+       "55    13\n",
+       "68    11\n",
+       "60     9\n",
+       "65     9\n",
+       "39     8\n",
+       "34     6\n",
+       "73     5\n",
+       "36     3\n",
+       "37     2\n",
+       "41     2\n",
+       "43     2\n",
+       "71     2\n",
+       "45     2\n",
+       "76     2\n",
+       "31     1\n",
+       "48     1\n",
+       "53     1\n",
+       "35     1\n",
+       "54     1\n",
+       "61     1\n",
+       "46     1\n",
+       "28     1\n",
+       "66     1\n",
+       "Name: read, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.read.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "62.48293682648241 41.977063173517585 52.23 10.25293682648241\n",
+      "130\n"
+     ]
+    }
+   ],
+   "source": [
+    "#to check the area of the variable 'read' \n",
+    "\n",
+    "m = df.read.mean()\n",
+    "sd = df.read.std()\n",
+    "x1 = m + sd \n",
+    "x2 = m - sd \n",
+    "print(x1, x2, m, sd)\n",
+    "count = 0\n",
+    "count_all = df['read'].value_counts()\n",
+    "count = count_all[(count_all.index > x2) & (count_all.index < x1)].sum()\n",
+    "print(count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "62.253586021386525 43.29641397861347 52.775 9.47858602138653\n",
+      "136\n",
+      "area 0.68\n"
+     ]
+    }
+   ],
+   "source": [
+    "#to check the area of the variable 'write'\n",
+    "\n",
+    "m = df.write.mean()\n",
+    "sd = df.write.std()\n",
+    "x1 = m + sd \n",
+    "x2 = m - sd \n",
+    "print(x1, x2, m, sd)\n",
+    "count = 0\n",
+    "count_all = df['write'].value_counts()\n",
+    "count = count_all[(count_all.index > x2) & (count_all.index < x1)].sum()\n",
+    "print(count)\n",
+    "df.ndim\n",
+    "print('area', count/len(df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61.75089077765 41.94910922235 51.85 9.900890777649998\n",
+      "136\n",
+      "area 0.68\n"
+     ]
+    }
+   ],
+   "source": [
+    "#to check the area of the variable 'science'\n",
+    "\n",
+    "m = df.science.mean()\n",
+    "sd = df.science.std()\n",
+    "x1 = m + sd \n",
+    "x2 = m - sd \n",
+    "print(x1, x2, m, sd)\n",
+    "count = 0\n",
+    "count_all = df['science'].value_counts()\n",
+    "count = count_all[(count_all.index > x2) & (count_all.index < x1)].sum()\n",
+    "print(count)\n",
+    "df.ndim\n",
+    "print('area', count/len(df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "62.0134477940773 43.276552205922705 52.645 9.368447794077296\n",
+      "125\n",
+      "area 0.625\n"
+     ]
+    }
+   ],
+   "source": [
+    "#to check the area of the variable 'math'\n",
+    "\n",
+    "m = df.math.mean()\n",
+    "sd = df.math.std()\n",
+    "x1 = m + sd \n",
+    "x2 = m - sd \n",
+    "print(x1, x2, m, sd)\n",
+    "count = 0\n",
+    "count_all = df['math'].value_counts()\n",
+    "count = count_all[(count_all.index > x2) & (count_all.index < x1)].sum()\n",
+    "print(count)\n",
+    "df.ndim\n",
+    "print('area', count/len(df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "check the normality for  associativity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63.1407934642267 41.669206535773306 52.405 10.735793464226697\n",
+      "126\n",
+      "area 0.63\n"
+     ]
+    }
+   ],
+   "source": [
+    "#to check the area of the variable 'socst'\n",
+    "\n",
+    "m = df.socst.mean()\n",
+    "sd = df.socst.std()\n",
+    "x1 = m + sd \n",
+    "x2 = m - sd \n",
+    "print(x1, x2, m, sd)\n",
+    "count = 0\n",
+    "count_all = df['socst'].value_counts()\n",
+    "count = count_all[(count_all.index > x2) & (count_all.index < x1)].sum()\n",
+    "print(count)\n",
+    "df.ndim\n",
+    "print('area', count/len(df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47    27\n",
+       "50    18\n",
+       "63    16\n",
+       "57    14\n",
+       "52    14\n",
+       "44    13\n",
+       "42    13\n",
+       "55    13\n",
+       "68    11\n",
+       "60     9\n",
+       "65     9\n",
+       "39     8\n",
+       "34     6\n",
+       "73     5\n",
+       "36     3\n",
+       "37     2\n",
+       "41     2\n",
+       "43     2\n",
+       "71     2\n",
+       "45     2\n",
+       "76     2\n",
+       "31     1\n",
+       "48     1\n",
+       "53     1\n",
+       "35     1\n",
+       "54     1\n",
+       "61     1\n",
+       "46     1\n",
+       "28     1\n",
+       "66     1\n",
+       "Name: read, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['read'].value_counts()"
    ]
   }
  ],
