--- a/Lectures Notes/class-1-20_03_2023.ipynb
+++ b/Lectures Notes/class-1-20_03_2023.ipynb
@@ -184,6 +184,45 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Concept of normality of a variable "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **to check the noramality of the variable** :\n",
+    "    1. calc. mean and standard deviation \n",
+    "    2. calc. \n",
+    "        - x1 = (mean + sd) \n",
+    "        - x2 = (mean - sd)\n",
+    "    3. to get the area of the curve b/w +-sd genrate a freq. table for the 'BMI'\n",
+    "    4. count the no. of values b/w x1 and x2 / no. of rows\n",
+    "        - >= 0.683\n",
+    "        - >= 0.955\n",
+    "        - >= 0.997"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How to evaluate the quality of data collected ?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
