--- a/Lectures Notes/class-1-20_03_2023.ipynb
+++ b/Lectures Notes/class-1-20_03_2023.ipynb
@@ -101,142 +101,19 @@
     "\n",
     "**Basic steps to follow in writting the code in jupyter notebook** \n",
     "1. Python is case sensitive\n",
-    "2. do not leave blank space while writing the code \n",
-    "3. \n"
+    "2. do not leave blank space while writing the code  \n"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Basics of Statistics \n",
-    "\n",
-    "There are two type of values : \n",
-    "1. discrete\n",
-    "2. continuous"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Data Types in Python\n",
-    "1. Integer : Indicates Discrete \n",
-    "2. Float : Indicates continuous\n",
-    "3. date and time: mm_dd_yyyy\n",
-    "4. object: referance of string"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**measurement of the variable** \n",
-    "\n",
-    "There are diff. ways of measuring the variable in python: \n",
-    "- the measurment of variable is categorical or numerical"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Instructions for Jupyter\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "- df : it is the object whose class is dataframe"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Class 3 : 22-03-2023"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "to save the file use **save as**  \n",
-    "to resave the file use **save and checkpoint**"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Concept of normality of a variable "
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- **to check the noramality of the variable** :\n",
-    "    1. calc. mean and standard deviation \n",
-    "    2. calc. \n",
-    "        - x1 = (mean + sd) \n",
-    "        - x2 = (mean - sd)\n",
-    "    3. to get the area of the curve b/w +-sd genrate a freq. table for the 'BMI'\n",
-    "    4. count the no. of values b/w x1 and x2 / no. of rows\n",
-    "        - >= 0.683\n",
-    "        - >= 0.955\n",
-    "        - >= 0.997"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### How to evaluate the quality of data collected ?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.10"
   },
   "orig_nbformat": 4
  },
