--- a/Lectures Notes/class-6-29-03-2023.ipynb
+++ b/Lectures Notes/class-6-29-03-2023.ipynb
@@ -266,6 +266,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -276,7 +277,9 @@
     "### The Interpretation\n",
     "If the calculated from Python is less than the critical value from the table, then you accept the Ho hypothesis  and conclude there is no difference between the two sections.<br><br>\n",
     "\n",
-    "If the calculated value from Python is greater than the critical from the table, then the Ha is accepted and we conclude there is a difference in the performance of the students between the two sections.<br>"
+    "If the calculated value from Python is greater than the critical from the table, then the Ha is accepted and we conclude there is a difference in the performance of the students between the two sections.<br>\n",
+    "\n",
+    "https://home.ubalt.edu/ntsbarsh/business-stat/StatistialTables.pdf"
    ]
   },
   {
