--- a/Lectures Notes/class-7-30-03-2023.ipynb
+++ b/Lectures Notes/class-7-30-03-2023.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,8 @@
       "0.7\n",
       "1.0\n",
       "1.0\n",
-      "Ttest_relResult(statistic=-10.572884939003538, pvalue=2.129686271744411e-09)\n"
+      "Ttest_relResult(statistic=-10.572884939003538, pvalue=2.129686271744411e-09)\n",
+      "Ttest_indResult(statistic=-5.883436354378723, pvalue=8.227200418527702e-07)\n"
      ]
     }
    ],
@@ -182,24 +183,8 @@
     "diff_x2 = diff_mean - diff_std*3 \n",
     "print(diff[(diff < diff_x1) & (diff > diff_x2)].size/diff.size)\n",
     "\n",
-    "print(stats.ttest_rel(sample['TwoDays'], sample['SevenDays']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stats.wilcoxon\n",
-    "stats.ttest_rel"
+    "print(stats.ttest_rel(sample['TwoDays'], sample['SevenDays']))\n",
+    "print(stats.ttest_ind(sample['TwoDays'], sample['SevenDays']))\n"
    ]
   }
  ],
