--- a/Lectures Notes/class-9-06_04_2023.ipynb
+++ b/Lectures Notes/class-9-06_04_2023.ipynb
@@ -497,7 +497,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.10"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "5557eb2532e6707a4b1ee2ffbeb3a2a7613dbaac2094006278037313157f71e1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
