--- a/Lectures Notes/pandas.ipynb
+++ b/Lectures Notes/pandas.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import statsmodels as sm"
+    "import pandas as pd "
    ]
   }
  ],
@@ -35,7 +35,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.10"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "5557eb2532e6707a4b1ee2ffbeb3a2a7613dbaac2094006278037313157f71e1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
